...
            TopAppBar(
                title = { Text(stringResource(id = R.string.app_name)) },
                actions = {
                    IconButton(
                        onClick = callbacks.onSettingsClick,
                        modifier = Modifier
                            .testTag("settings_button")
                            .semantics { contentDescription = "Open Settings" },
                    ) {
                        Icon(
                            imageVector = Icons.Default.Settings,
                            contentDescription = null, // Description on IconButton, not Icon
                        )
...
